build: se cargo json db, patron repository para cambio de bd.
se cambiaron los services y repositories para que aguante tanto Mongo como un .json. El gitignore para excluir la db local. App.js modificado para mostrar en consola que DB se usa. ATT: se agrego DB_PROVIDER al .env.

--- a/.gitignore
+++ b/.gitignore
@@ -145,3 +145,6 @@ vite.config.ts.timestamp-*
 /ORT-TP2-ProyectoFinal
 /proyecto-stock-api
 .DS_Store
+
+# Database JSON archivo
+database/database.json
